--- a/app/globals.css
+++ b/app/globals.css
@@ -46,7 +46,7 @@
 }
 
 :root {
-    --background: oklch(0.16 0.031 196.2);
+    --background: #1F1F1F;
     --foreground: oklch(1 0 0);
     --card: oklch(1 0 0);
     --card-foreground: oklch(0.145 0 0);
@@ -57,8 +57,8 @@
     --secondary: oklch(0.97 0 0);
     --secondary-foreground: oklch(0.205 0 0);
     --muted: oklch(0.97 0 0);
-    --muted-foreground: oklch(0.785 0.072 195.1);
-    --accent: oklch(0.92 0.036 195.4);
+    --muted-foreground: #8B8B8B;
+    --accent: #F6B95A;
     --accent-foreground: oklch(0.16 0.03 195.48);
     --destructive: oklch(0.577 0.245 27.325);
     --destructive-foreground: oklch(0.577 0.245 27.325);
@@ -82,7 +82,7 @@
 }
 
 .dark {
-    --background: oklch(0.145 0 0);
+    --background: #1F1F1F;
     --foreground: oklch(0.985 0 0);
     --card: oklch(0.145 0 0);
     --card-foreground: oklch(0.985 0 0);
@@ -93,8 +93,8 @@
     --secondary: oklch(0.269 0 0);
     --secondary-foreground: oklch(0.985 0 0);
     --muted: oklch(0.269 0 0);
-    --muted-foreground: oklch(0.708 0 0);
-    --accent: oklch(0.269 0 0);
+    --muted-foreground: #8B8B8B;
+    --accent: #F6B95A;
     --accent-foreground: oklch(0.985 0 0);
     --destructive: oklch(0.396 0.141 25.723);
     --destructive-foreground: oklch(0.637 0.237 25.331);
